# jupyter-ai-chat

./: .gitignore  .pnp.cjs  .prettierignore  LICENSE  README.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter_ai_chat/: __init__.py  myhandler.py  serverhandler.py
src/: index.ts
